[project]
name = "utilscripts"
version = "0.1.0"
description = "Utility scripts for stuff. One off python scripts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.13.4",
    "ollama==0.4.8",
    "requests==2.32.3",
]

[project.scripts]
index-scraper = "index_scraper.main:main"
tree-summary = "tree_summary.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["index_scraper", "tree_summary"]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 88
target-version = "py311"